tests/int/use_command/snapshots/integration__int__use_command__flags__modules_advanced_globs_flags_e_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - advanced_globs
    - "-e"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::advanced_globs::internal::internal_a
crate::advanced_globs::internal::internal_b
crate::advanced_globs::internal::internal_c
crate::dir_module::child_file
crate::file_module
crate::visibility

----- stderr -----
