tests/int/use_command/snapshots/integration__int__use_command__flags__modules_advanced_globs_flags_r_e_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - advanced_globs
    - "-r"
    - "-e"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::advanced_globs::Consumer
crate::advanced_globs::MultiImpl
crate::advanced_globs::Provider
crate::advanced_globs::Transformer
crate::advanced_globs::aliased_module::OriginalStruct
crate::advanced_globs::aliased_module::original_name
crate::advanced_globs::deep_function
crate::advanced_globs::enum_variants::Color
crate::advanced_globs::internal::internal_a
crate::advanced_globs::internal::internal_b
crate::advanced_globs::internal::internal_c
crate::advanced_globs::layer1::layer1_function
crate::advanced_globs::layer1::layer2
crate::advanced_globs::layer1::layer2::layer2_function
crate::advanced_globs::layer1::layer2::layer3
crate::advanced_globs::layer1::layer2::layer3::DEEP_CONST
crate::advanced_globs::layer1::layer2::layer3::DeepStruct
crate::advanced_globs::layer1::layer2::layer3::deep_function
crate::advanced_globs::layer1_function
crate::advanced_globs::layer2_function
crate::advanced_globs::macro_module::helper
crate::advanced_globs::original::OriginalType
crate::advanced_globs::original::shadowed_func
crate::advanced_globs::original::unique_original
crate::advanced_globs::shadowing::shadowed_func
crate::advanced_globs::trait_providers::Consumer
crate::advanced_globs::trait_providers::Provider
crate::advanced_globs::trait_providers::Transformer
crate::advanced_globs::unix_specific::PLATFORM_ID
crate::advanced_globs::unix_specific::platform_func
crate::advanced_globs::windows_specific::PLATFORM_ID
crate::advanced_globs::windows_specific::platform_func
crate::dir_module::child_file
crate::dir_module::child_file::greet
crate::file_module
crate::file_module::greet
crate::visibility
crate::visibility::pub_mod::greet

----- stderr -----
